Updated gitignore to not include .nuspec. Deleted deprecated file

--- a/HttpWebRequestExecutor/HttpWebRequestExecutor.csproj
+++ b/HttpWebRequestExecutor/HttpWebRequestExecutor.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Ryan Johnson</Authors>
+    <Copyright>Copyright 2019</Copyright>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
