--- a/HttpWebRequestExecutor/HttpWebRequestExecutor.csproj
+++ b/HttpWebRequestExecutor/HttpWebRequestExecutor.csproj
@@ -6,6 +6,11 @@
     <Copyright>Copyright 2019</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression></PackageLicenseExpression>
+    <PackageLicenseFile>mitlicesnse.txt</PackageLicenseFile>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +20,13 @@
   <ItemGroup>
     <ProjectReference Include="..\HttpBuilder\HttpBuilder.csproj" />
     <ProjectReference Include="..\HttpParser\HttpParser.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\Desktop\mitlicesnse.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
