--- a/HttpWebRequestExecutor/HttpWebRequestExecutor.csproj
+++ b/HttpWebRequestExecutor/HttpWebRequestExecutor.csproj
@@ -7,7 +7,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression></PackageLicenseExpression>
-    <PackageLicenseFile>mitlicesnse.txt</PackageLicenseFile>
+    <PackageLicenseFile>mitlicense.txt</PackageLicenseFile>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
     <Version>1.1.1</Version>
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\..\Desktop\mitlicesnse.txt">
+    <None Include="./mitlicense.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
