--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,17 +1,21 @@
-name: .NET Core
+name: dotnet core - build
 
 on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.2.108
-    - name: Build with dotnet
+    - name: Build
       run: dotnet build --configuration Release
+    - name: Unit Tests
+      run: dotnet test
+    - name: Build NuGet Package
+      run: dotnet pack ./HttpWebRequestExecutor.csproj --configuration Release -o NuGetPackages
+    - name: Deploy NuGet Package
+      run: dotnet nuget push ./HttpWebRequestExecutor/NuGetPackages/HttpWebRequestExecutor.1.1.5.nupkg -k $ -s https://api.nuget.org/v3/index.json
