--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -16,6 +16,6 @@ jobs:
     - name: Unit Tests
       run: dotnet test
     - name: Build NuGet Package
-      run: dotnet pack ./HttpWebRequestExecutor.csproj --configuration Release -o NuGetPackages
+      run: dotnet pack ./HttpWebRequestExecutor/HttpWebRequestExecutor.csproj --configuration Release -o NuGetPackages
     - name: Deploy NuGet Package
       run: dotnet nuget push ./HttpWebRequestExecutor/NuGetPackages/HttpWebRequestExecutor.1.1.5.nupkg -k $ -s https://api.nuget.org/v3/index.json
