--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -19,3 +19,5 @@ jobs:
       run: dotnet pack ./HttpWebRequestExecutor/HttpWebRequestExecutor.csproj --configuration Release -o NuGetPackages
     - name: Deploy NuGet Package
       run: dotnet nuget push ./HttpWebRequestExecutor/NuGetPackages/HttpWebRequestExecutor.1.1.5.nupkg -k $ -s https://api.nuget.org/v3/index.json
+    - name: print
+      run: cat $
