--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -16,16 +16,19 @@ jobs:
     - name: Print Version Env
       run: echo $version
       
-    - uses: actions/checkout@v1
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 2.2.108
+        dotnet-version: '8.0.x'
+        
     - name: Build
       run: dotnet build --configuration Release
     - name: Unit Tests
       run: dotnet test
+      
     - name: Build NuGet Package
       run: dotnet pack ./HttpWebRequestExecutor/HttpWebRequestExecutor.csproj --configuration Release -o NuGetPackages
+      
     - name: Deploy NuGet Package
       run: dotnet nuget push ./HttpWebRequestExecutor/NuGetPackages/HttpWebRequestExecutor.1.1.5.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
