--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -5,16 +5,16 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-    - name: Generates the build version
-      id: version
-      run: echo "::set-output name=version::$(date +'%Y.%m.%d'.$GITHUB_RUN_NUMBER)"
     
-    - name: Print Version Steps
-      run: echo ${{steps.version.output.version}}
-
-    - name: Print Version Env
-      run: echo $version
+    steps:
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y.%m.%d').$GITHUB_RUN_NUMBER"
+    
+    - name: Test with environment variables
+      run: echo $TAG_NAME
+      env:
+        TAG_NAME: ${{ steps.date.outputs.date }}cho $version
       
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -28,7 +28,7 @@ jobs:
       run: dotnet test
       
     - name: Build NuGet Package
-      run: dotnet pack ./HttpWebRequestExecutor/HttpWebRequestExecutor.csproj --configuration Release -o NuGetPackages
+      run: dotnet pack ./HttpWebRequestExecutor/HttpWebRequestExecutor.csproj --configuration Release -o -p:PackageVersion=${{ steps.date.outputs.date }} NuGetPackages
       
     - name: Deploy NuGet Package
-      run: dotnet nuget push ./NuGetPackages/HttpWebRequestExecutor.1.1.6.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+      run: dotnet nuget push ./NuGetPackages/HttpWebRequestExecutor.${{ steps.date.outputs.date }}.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
