--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -24,11 +24,12 @@ jobs:
         
     - name: Build
       run: dotnet build --configuration Release
+      
     - name: Unit Tests
       run: dotnet test
       
     - name: Build NuGet Package
-      run: dotnet pack ./HttpWebRequestExecutor/HttpWebRequestExecutor.csproj --configuration Release -o -p:PackageVersion=${{ steps.date.outputs.date }} NuGetPackages
+      run: dotnet pack ./HttpWebRequestExecutor/HttpWebRequestExecutor.csproj --configuration Release -o NuGetPackages -p:PackageVersion=${{ steps.date.outputs.date }}
       
     - name: Deploy NuGet Package
       run: dotnet nuget push ./NuGetPackages/HttpWebRequestExecutor.${{ steps.date.outputs.date }}.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
